--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <!-- rendering elements css file -->
     <link rel="stylesheet" href="css/normalize.css">
     <!-- google fonts links-->
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
